--- a/LoginScreen/LoginScreen/Base.lproj/Main.storyboard
+++ b/LoginScreen/LoginScreen/Base.lproj/Main.storyboard
@@ -431,11 +431,11 @@
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="homePageButton" destination="SYY-kr-ons" id="Aut-MB-oa2"/>
-                        <outlet property="homePageFirstLabel" destination="cre-Qm-0QB" id="ygI-jb-cR7"/>
                         <outlet property="homePageImageView" destination="Exr-Nh-dHF" id="IHU-b0-qn3"/>
-                        <outlet property="homePageSecondLabel" destination="lqe-Xl-eOt" id="A53-Hd-rS9"/>
-                        <outlet property="homePageThirdLabel" destination="ADJ-aw-svg" id="0tk-Oi-TBN"/>
+                        <outlet property="informationLabel" destination="ADJ-aw-svg" id="0tk-Oi-TBN"/>
+                        <outlet property="logOutButton" destination="SYY-kr-ons" id="Aut-MB-oa2"/>
+                        <outlet property="loggedInLabel" destination="cre-Qm-0QB" id="ygI-jb-cR7"/>
+                        <outlet property="nameLabel" destination="lqe-Xl-eOt" id="A53-Hd-rS9"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ins-Uo-fyH" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
